# cloud-in-a-box

./: .gitignore  README.md  enable_cloudkitty  install.sh  magnum_monitor.sh  openstack_kubeconfig  overcommit.conf  post_reboot.sh  uninstall.sh
1.start_here/: iam.tf  main.tf  outputs.tf  provider.tf  resource-bucket.tf  resource-dns.tf  resource-networks.tf  resource-secgroups.tf  run_me_first.sh  variables.tf
2.build_supporting_infra/: build-loadbalancer.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
2.build_supporting_infra/appinfo/: backstage.txt  jenkins.txt
2.build_supporting_infra/backstage-instance/: backstage-instance.tf  backstage-network.tf  backstage-output.tf  backstage-secgroups.tf  backstage.userdata  variables.tf
3.example_apps/: README.md
app-demo/: clusterissuer.yaml  ingress.yaml
documentation/: requirements.txt  test.py
fixups/: horizon-static-url-patch.yaml  nuke_disk.sh  post_reboot.sh  ssh_clean.sh
modules/harness/: main.tf  (+1 more)
scripts/: 0-os_install_prereqs.sh  1-os_install_sunbeam.sh  2-os_config_sunbeam.sh  3-os_extra_config.sh  99-os_cleanup.sh  admin_openrc  demo-openrc
start_here/: buckets.tf  files.tf  github.tf  github_core.tf  github_module_upload.tf  iam.tf  images.tf  k8s_templates.tf  main.tf  module_upload.tf  outputs.tf  projects.tf  provider.tf  variables.tf  volume_types.tf
utils/: gh_cleanup.sh  iommu.sh
utils/hugepagesadm/: Cargo.toml
utils/hugepagesadm/src/: main.rs
utils/iommuadm/: Cargo.toml  readme.md
utils/iommuadm/src/: main.rs
wip/: bind_setup.sh  enable_cloudkitty
(+165 files in other folders)
