[package]
name = "iommuadm"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
libc = "0.2"
which = "6"
tempfile = "3"
syslog = "6"

[package.metadata.deb]
maintainer = "Matt Verran <verranm76@gmail.com>"
license-file = ["LICENSE", "0"]
depends = "$auto"
section = "admin"
priority = "optional"
assets = [
    ["target/release/iommuadm", "usr/sbin/", "755"]
]

